--- a/src/main/webapp/src/app/toolbar.component.html
+++ b/src/main/webapp/src/app/toolbar.component.html
@@ -1,5 +1,5 @@
 <md-toolbar color="primary">
   <span>Sites Run</span>
-  <span flex></span>
+  <span class="fill-in-space"></span>
   <button md-button id="signin2-button">Sign In with Google</button>
 </md-toolbar>
