--- a/src/main/webapp/src/app/app.component.html
+++ b/src/main/webapp/src/app/app.component.html
@@ -1,10 +1,10 @@
 <md-toolbar color="primary">
   <span>Sites Run</span>
   <span class="fill-in-space"></span>
-  <span [hidden]="isSignedIn">
-    <button md-button id="signin2-button" >Sign In with Google</button>
+  <span *ngIf="!auth2.isSignedIn.get()">
+    <button md-button (click)="auth2.signIn()">Sign In with Google</button>
   </span>
-  <span *ngIf="isSignedIn">
-    <button md-button (click)="signOut()">Sign Out</button>
+  <span *ngIf="auth2.isSignedIn.get()">
+    <button md-button (click)="auth2.signOut()">Sign Out</button>
   </span>
 </md-toolbar>
