--- a/src/main/webapp/src/app/app.component.html
+++ b/src/main/webapp/src/app/app.component.html
@@ -2,8 +2,8 @@
   <md-toolbar color="primary">
     <span>Sites Run</span>
     <span class="fill-in-space"></span>
-    <button md-button *ngIf="!auth2.isSignedIn.get()" (click)="auth2.signIn()">Sign In with Google</button>
-    <button md-button *ngIf="auth2.isSignedIn.get()" (click)="auth2.signOut()">Sign Out</button>
+    <button md-button *ngIf="!auth2.isSignedIn.get()" (click)="signIn()">Sign In with Google</button>
+    <button md-button *ngIf="auth2.isSignedIn.get()" (click)="signOut()">Sign Out</button>
   </md-toolbar>
   <router-outlet></router-outlet>
 </div>
