--- a/src/main/webapp/src/app/site-detail/site-detail.component.html
+++ b/src/main/webapp/src/app/site-detail/site-detail.component.html
@@ -1,5 +1,5 @@
 <div>
-  <span>{{site.name}}</span>
+  <span>sites.run/{{site.name}}</span>
   <span>&#8594;</span>
   <span><a target="_blank" href={{site.source}}>{{site.source}}</a></span>
 </div>
