--- a/src/main/webapp/src/styles.css
+++ b/src/main/webapp/src/styles.css
@@ -1,5 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
 body {
+  background-color: #F5F5F5;
   margin: 0;
+}
+
+md-card {
+  margin: 20px;
 }
