--- a/src/main/webapp/src/app/site-list/site-list.component.scss
+++ b/src/main/webapp/src/app/site-list/site-list.component.scss
@@ -9,7 +9,8 @@ md-list.site-list {
       display: none;
     }
 
-    &:hover {
+    &:hover,
+    &:focus {
       background-color: $hover-background-color;
       .delete-button {
         display: block;
