--- a/src/main/webapp/src/app/my-sites/my-sites.component.html
+++ b/src/main/webapp/src/app/my-sites/my-sites.component.html
@@ -2,7 +2,7 @@
   <md-card-title>Create a Site</md-card-title>
   <md-divider></md-divider>
   <md-card-content>
-    <sites-run-create-site [mode]="mode" (siteSaved)="onSiteSave($event)"></sites-run-create-site>
+    <sites-run-create-site [mode]="mode" (siteSaved)="onSiteSaved($event)"></sites-run-create-site>
   </md-card-content>
 </md-card>
 
@@ -11,6 +11,6 @@
   <md-divider></md-divider>
   <md-card-content>
     <md-spinner *ngIf="loading"></md-spinner>
-    <sites-run-site-list *ngIf="!loading" [mode]="mode" [sites]="sites"></sites-run-site-list>
+    <sites-run-site-list *ngIf="!loading" [mode]="mode" [sites]="sites" (siteDeleted)="onSiteDeleted($event)"></sites-run-site-list>
   </md-card-content>
 </md-card>
