--- a/src/main/webapp/src/app/site-detail/site-detail.component.html
+++ b/src/main/webapp/src/app/site-detail/site-detail.component.html
@@ -1,11 +1,11 @@
 <div class="site-detail">
-  <button md-mini-fab class="delete-button">
-    <md-icon class="md-24">delete</md-icon>
-  </button>
   <div class="site-info">
     <span>sites.run/{{site.name}}</span>
     <span>&#8594;</span>
     <span><a target="_blank" href={{site.source}}>{{site.source}}</a></span>
-    <div>{{site.description}}</div>
+    <div class="description">{{site.description}}</div>
   </div>
+  <button md-mini-fab class="delete-button" (click)=deleteSite()>
+    <md-icon class="md-24">delete</md-icon>
+  </button>
 </div>
