--- a/src/main/webapp/src/app/site-list/site-list.component.scss
+++ b/src/main/webapp/src/app/site-list/site-list.component.scss
@@ -2,8 +2,12 @@
 
 md-list.site-list {
   md-list-item .md-list-item {
+    align-items: flex-start;
+    border-bottom: 1px solid gray;
     height: 100%;
-    min-height: 60px;
+    min-height: 62px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 
     .delete-button {
       display: none;
