--- a/src/main/webapp/src/app/home/home.component.html
+++ b/src/main/webapp/src/app/home/home.component.html
@@ -1,1 +1,11 @@
-<md-card>This is Home</md-card>
+<md-card>
+  <md-card-content>
+    <h2>Give the website link an awesome name! For memorizing! For sharing!</h2>
+    <h3>Please sign in to continue.</h3>
+  </md-card-content>
+</md-card>
+
+<footer>
+  <span>Contact information: <a href="mailto:admin@sites.run">admin@sites.run</a>. |</span>
+  <span> All Rights Reserved</span>
+</footer>
