--- a/src/main/webapp/src/app/site-detail/site-detail.component.html
+++ b/src/main/webapp/src/app/site-detail/site-detail.component.html
@@ -1,6 +1,6 @@
 <div class="site-detail">
   <div class="site-info">
-    <span>sites.run/{{site.name}}</span>
+    <span><a target="_blank" href="https://sites.run/{{site.name}}">sites.run/{{site.name}}</a></span>
     <span>&#8594;</span>
     <span><a target="_blank" href={{site.source}}>{{site.source}}</a></span>
     <div class="description">{{site.description}}</div>
