--- a/src/main/webapp/src/app/create-site/create-site.component.html
+++ b/src/main/webapp/src/app/create-site/create-site.component.html
@@ -5,13 +5,13 @@
     </md-input>
   </div>
   <div>
-    <md-input formControlName="source" type="url" placeholder="site url">
+    <md-input formControlName="source" type="url" placeholder="website url">
       <md-hint align="start" [hidden]="source.valid || !source.errors.validationFail">
         must be a valid url (e.g., http://www.google.com)
       </md-hint>      
     </md-input>
   </div>
-  <div><md-input formControlName="description" type="text" placeholder="description" maxLength="500"></md-input></div>
+  <div><md-input formControlName="description" type="text" placeholder="description (optional)" maxLength="500"></md-input></div>
   <div class="action-buttons">
     <button md-raised-button color="primary" type="reset">Reset</button>
     <button md-raised-button color="primary" type="submit" [disabled]="!siteForm.valid" class="save-button">Save</button>
