--- a/src/main/webapp/src/styles.css
+++ b/src/main/webapp/src/styles.css
@@ -5,6 +5,14 @@ body {
   margin: 0;
 }
 
+footer {
+  background-color: mediumpurple;
+  bottom: 0;
+  padding: 20px;
+  position: absolute;
+  width: 100%;
+}
+
 md-card {
   margin: 20px;
 }
