animation and navigation

--- a/src/main/webapp/src/app/site-detail/site-detail.component.scss
+++ b/src/main/webapp/src/app/site-detail/site-detail.component.scss
@@ -13,7 +13,6 @@
 
   .delete-button {
     background-color: $button-background-color;
-    margin-left: 20px;
-    min-width: 40px;
+    margin-right: 20px;
   }
 }
