--- a/src/main/webapp/src/app/site-list/site-list.component.html
+++ b/src/main/webapp/src/app/site-list/site-list.component.html
@@ -1,5 +1,8 @@
 <md-list class="site-list">
-  <md-list-item *ngFor="let site of sites">
-    <sites-run-site-detail [site]="site" (siteDeleted)="deleteSite($event)"></sites-run-site-detail>
+  <md-list-item *ngFor="let site of sites" [@fadeInOut]="'in'">
+    <sites-run-site-detail 
+        [site]="site" 
+        (siteDeleted)="deleteSite($event)">
+    </sites-run-site-detail>
   </md-list-item>
 </md-list>
