--- a/src/main/webapp/src/app/home/home.component.html
+++ b/src/main/webapp/src/app/home/home.component.html
@@ -1,9 +1,11 @@
-<md-card>
-  <md-card-content>
-    <h2>Give the website link an awesome name! For memorizing! For sharing!</h2>
-    <h3>Please sign in to continue.</h3>
-  </md-card-content>
-</md-card>
+<div class="home-content">
+  <md-card>
+    <md-card-content>
+      <h2>Give the website link an awesome name! For memorizing! For sharing!</h2>
+      <h3><button md-raised-button color="primary" (click)="signIn()">Sign In</button> to save the weblinks you created.</h3>
+    </md-card-content>
+  </md-card>
+</div>
 
 <footer>
   <span>Contact information: <a href="mailto:admin@sites.run">admin@sites.run</a>. |</span>
