check name conflict

--- a/src/main/webapp/src/app/create-site/create-site.component.html
+++ b/src/main/webapp/src/app/create-site/create-site.component.html
@@ -1,8 +1,11 @@
 <form [formGroup]="siteForm" (submit)="saveSite($event)" class="create-site-form">
-  <div>
-    <md-input formControlName="name" type="text" placeholder="name">
+  <div class="name-wrapper">
+    <md-input formControlName="name" type="text" placeholder="name" class="name-input" (keyup)="checkNameConflict()">
       <md-hint align="start" [hidden]="name.valid || !name.errors.startWith_">name cannot start with '_'</md-hint>
     </md-input>
+    <div class="name-status-label">
+      <div *ngIf="isNameConflict" class="name-conflict-message">"{{name.value}}" already exists!</div>
+    </div>
   </div>
   <div>
     <md-input formControlName="source" type="url" placeholder="website url">
@@ -14,6 +17,6 @@
   <div><md-input formControlName="description" type="text" placeholder="description (optional)" maxLength="500"></md-input></div>
   <div class="action-buttons">
     <button md-raised-button color="primary" type="reset">Reset</button>
-    <button md-raised-button color="primary" type="submit" [disabled]="!siteForm.valid" class="save-button">Save</button>
+    <button md-raised-button color="primary" type="submit" [disabled]="!siteForm.valid || isNameConflict" class="save-button">Save</button>
   </div>
 </form>
