--- a/src/main/webapp/src/app/home/home.component.html
+++ b/src/main/webapp/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <md-card>
     <md-card-content>
       <h2>Give the website link an awesome name! For memorizing! For sharing!</h2>
-      <h3><button md-raised-button color="primary" (click)="signIn()">Sign In</button> to save the weblinks you created.</h3>
+      <h3><button md-button (click)="signIn()">Sign In</button> to save the weblinks you created.</h3>
     </md-card-content>
   </md-card>
 
