--- a/src/main/webapp/src/app/my-sites/my-sites.component.html
+++ b/src/main/webapp/src/app/my-sites/my-sites.component.html
@@ -1,5 +1,5 @@
 <md-card>
-  <md-card-title>Create a Site</md-card-title>
+  <md-card-title>Name a Site</md-card-title>
   <md-divider></md-divider>
   <md-card-content>
     <sites-run-create-site [mode]="mode" (siteSaved)="onSiteSaved($event)"></sites-run-create-site>
