--- a/src/main/webapp/src/app/home/home.component.html
+++ b/src/main/webapp/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="home-content">
   <md-card>
     <md-card-content>
-      <h2>Give the website link an awesome name! For memorizing! For sharing!</h2>
-      <h3><button md-button (click)="signIn()">Sign In</button> to save the weblinks you named.</h3>
+      <h3>Give the website link an awesome name! For memorizing! For sharing!</h3>
+      <p><button md-button (click)="signIn()">Sign In</button> to save the weblinks you named.</p>
     </md-card-content>
   </md-card>
 
@@ -15,7 +15,7 @@
   </md-card>
 </div>
 
-<footer>
+<!--<footer>
   <span>Contact information: <a href="mailto:admin@sites.run">admin@sites.run</a>. |</span>
   <span> All Rights Reserved</span>
-</footer>
+</footer>-->
